Issue #174 fix overflowing simple question content on action buttons

--- a/src/app/pages/player/contents/simple-question/simple-question.component.scss
+++ b/src/app/pages/player/contents/simple-question/simple-question.component.scss
@@ -1,7 +1,6 @@
 .flip-container {
   display: flex;
   flex-grow: 1;
-  height:100%;
   perspective: 1000px;
 
   &.flipped {
